--- a/tic-tac-toe/src/App.css
+++ b/tic-tac-toe/src/App.css
@@ -36,3 +36,64 @@
     transform: rotate(360deg);
   }
 }
+
+
+
+.App {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+ 
+
+}
+
+
+.game-board {
+  background-color: #175642;
+  border: 3px solid #ebc719;
+  padding: 38px;
+  border-radius: 28px;
+  width: 50%;
+  display: flex;
+  justify-content: center;
+  margin: 0 auto;
+  min-height: 367px;
+}
+
+
+.game-info {
+  margin: 0 auto;
+  background-color:#ebc719;
+  margin-top: 10px;
+  padding: 14px;
+  border-radius: 10px;
+  margin-bottom: 10px;
+  margin-top: 10px;
+  width: 71%;
+  display: flex;
+  justify-content: space-around;
+  color: #524814;
+
+}
+
+.square {
+  min-width: 200px;
+  min-height: 168px;
+  padding: 76px;
+  background: #f7f75f;
+  border-radius: 33px;
+  border: 2px solid #524814;
+  margin: 1px;
+  font-size: 25px;
+  color: #524814;
+ 
+}
+
+.player-space{
+  border-radius: 8px;
+  border: 2px solid  #175642;
+  padding: 4px;
+  color: #524814;
+
+}
